@@ -4,6 +4,7 @@ Changes in 3.0.1
 * FIX: afpd: Fix a crash on FreeBSD
 * FIX: Fix possible alignment violations due to bad casts
 * FIX: dbd: Fix logging
+* FIX: apple_dump: Extended Attributes AppleDouble support for *BSD
 * UPD: Install relevant includes necessary for building programs with
        installed headers and shared lib libatalk
 
